--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,5 +1,33 @@
-body{
-    width: 1160px;
-    margin-right: auto;
-    margin-left: auto;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300;1,700&display=swap');
+
+@font-face {
+    font-family: "Raleway";
+    src: url(../polices/Raleway-VariableFont_wght.woff);
+    src: url(../polices/Raleway-Italic-VariableFont_wght.woff);
+    src: url(../polices/Raleway-VariableFont_wght.ttf) format('truetype');
+    src: url(../polices/Raleway-Italic-VariableFont_wght.ttf) format('truetype');
+}
+
+p{
+    font-family: "Raleway", sans-serif; 
+}
+
+ul{
+    font-family: "Raleway", sans-serif;
+}
+
+h1{
+    font-family: "Lato", sans-serif;
+}
+
+h2{
+    font-family: "Lato", sans-serif;
+}
+
+h3{
+    font-family: "Lato", sans-serif;
+}
+
+h4{
+    font-family: "Lato", sans-serif;
 }
