--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -36,13 +36,17 @@ h4{
     font-family: "Lato", sans-serif;
 }
 
-nav{
-    font-style: italic;
-    background-color: #2c1d27;
-    color: white
+body{
+    background-color: #782221;
+    color: white;
 }
 
-#flex-col{
-    display:flex;
-    flex-direction: row;
+#coordonnees{
+    font-style: italic;
+    background-color: #2c1d27;
+}
+
+#competences{
+    background-color: white;
+    color: black;
 }
