--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -40,13 +40,16 @@ body{
     width: 1160px;
     margin-right: auto;
     margin-left: auto;
-    background-color: #782221;
+    background-color:white;
     color: white;
+    border-right: 1px solid black;
 }
 
 header{
+    background-color: #782221;
     display:flex;
     flex-direction: column;
+    text-align: center;
 }
 
 #coordonnees{
@@ -55,6 +58,7 @@ header{
     font-style: italic;
     background-color: #2c1d27;
     padding: 10px;
+    align-items: center;
 }
 address{
     flex-basis: 33.33%;
@@ -73,7 +77,6 @@ h3{
 }
 
 main{
-    background-color: white;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -81,11 +84,28 @@ main{
 
 #acote{
     background-color: #782221;
-    flex-basis: 30%;
-    padding-right: 10px;
+    box-sizing: border-box;
+    width: 30%;
+    padding-right: 20px;
 }
 
 footer{
+    background-color: #782221;
     display: flex;
     flex-direction: column;
+    text-align: center;
+}
+
+#adresse{
+    text-align: left;
+}
+
+#telephone{
+    text-align: right;
+}
+
+#apropos{
+    padding-left: 10px;
+    text-align: justify;
+    text-indent: 40px;
 }
