--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -61,12 +61,14 @@ header{
     align-items: center;
 }
 address{
-    flex-basis: 33.33%;
+    box-sizing: border-box;
+    width: 33.33%;
 }
 
 #competences{
     color: black;
-    flex-basis: 66%;
+    box-sizing: border-box;
+    width: 66%;
     padding: 0px 10px;
 }
 
@@ -85,7 +87,7 @@ main{
 #acote{
     background-color: #782221;
     box-sizing: border-box;
-    width: 30%;
+    width: 34%;
     padding-right: 20px;
 }
 
