--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -111,3 +111,17 @@ footer{
     text-align: justify;
     text-indent: 40px;
 }
+
+figure{
+    width: 150px;
+    height: 150px;
+    text-align: center;
+}
+
+img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+    border-radius: 50%;
+    box-shadow: 0 0 30px white;
+}
