--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -115,12 +115,12 @@ footer{
     text-indent: 40px;
 }
 
-figure{
+#figure_photo{
     width: 150px;
     height: 150px;
 }
 
-img{
+#photo_identite{
     width: 100%;
     height:100%;
     object-fit: cover;
@@ -131,4 +131,15 @@ img{
 a{
     color:white;
     text-decoration: none;
+}
+
+figure{
+    width: 50px;
+    height: 50px;
+}
+
+img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
 }
