--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -98,7 +98,8 @@ footer{
     background-color: #782221;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 #adresse{
@@ -142,4 +143,10 @@ img{
     width: 100%;
     height:100%;
     object-fit: cover;
+    border-radius: 10%;
+}
+
+#bandeau_reseaux_sociaux{
+    display: flex;
+    flex-direction: row;
 }
