--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -133,6 +133,10 @@ footer{
     box-shadow: 0 0 30px white;
 }
 
+#photo_identite:hover{
+    cursor: zoom-in;
+}
+
 a{
     color:white;
     text-decoration: none;
@@ -143,14 +147,14 @@ figure{
     height: 50px;
 }
 
-img{
+#social{
     width: 100%;
     height:100%;
     object-fit: cover;
     border-radius: 10%;
 }
 
-img:hover{
+#social:hover{
     opacity:0.5;
 }
 
