--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -20,19 +20,7 @@ address{
     font-family: "Raleway", sans-serif;
 }
 
-h1{
-    font-family: "Lato", sans-serif;
-}
-
-h2{
-    font-family: "Lato", sans-serif;
-}
-
-h3{
-    font-family: "Lato", sans-serif;
-}
-
-h4{
+h1,h2,h3,h4{
     font-family: "Lato", sans-serif;
 }
 
@@ -156,13 +144,13 @@ figure{
     height: 50px;
 }
 
-#social{
+#linkedin, #twitter, #github{
     width: 100%;
     height:100%;
     object-fit: cover;
     border-radius: 10%;
 }
 
-#social:hover{
+#linkedin:hover, #twitter:hover, #github:hover{
     opacity:0.5;
 }
